--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
         <title>DIMOSTHENIS</title>
+        <style type="text/css"> 
+            @font-face { font-family: Teko; font-weight:medium; src: url('Teko-Medium.ttf');}
+            </style>    
     </head>
-    <body>
-        not yet
+    <body style="background-color:#292929;">
+        <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:500%;"> not yet </h1></div>
     </body>
 </html>
