--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
             </style>    
     </head>
     <body style="background-color:#292929;">
-        <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:500%;"> not yet </h1></div>
+        <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:500%;"> 0% </h1></div>
     </body>
 </html>
