--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>DIMOSTHENIS</title>
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" href="/favicon.ico">
         <style type="text/css"> 
             @font-face { font-family: Teko; font-weight:medium; src: url('Teko-Medium.ttf');}
             </style>    
