--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             @font-face { font-family: Teko; font-weight:medium; src: url('Teko-Medium.ttf');}
             </style>    
     </head>
-    <body style="background-color:#292929;">
-        <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:500%;"> 0% </h1></div>
+    <body style="background-color:#202020;">
+        <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:500%;"> DIMOSTHENIS </h1></div>
     </body>
 </html>
