Added my mail & Bless yall

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     </head>
     <body style="background-color:#202020;">
         <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:500%;"> DIMOSTHENIS </h1></div>
+        <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:200%;"> Contact mail: <a style="text-decoration:none; color:#658385;" href="mailto:hello@dimosthenis.cc">hello@dimosthenis.cc</a></h1></div>
+        <div><h1 style="text-align:center; font-family:Teko; color:white; font-size:100%;"> God bless you all </h1></div>
     </body>
 </html>
